Bug 475467 - New log spam about being unable to open nonexistent wallpaper metadata.json files
Summary: New log spam about being unable to open nonexistent wallpaper metadata.json f...
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kpackage
Classification: Frameworks and Libraries
Component: default (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR minor
Target Milestone: ---
Assignee: Alexander Lohnau
URL:
Keywords: qt6
Depends on:
Blocks:
 
Reported: 2023-10-11 14:00 UTC by Nate Graham
Modified: 2023-10-18 20:47 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nate Graham 2023-10-11 14:00:49 UTC
Seen in Plasma's journal logs today:

Oct 11 07:57:07 Liberator plasmashell[66745]: kf.coreaddons: Couldn't open "/home/nate/.local/share/wallpapers/ArcDusk-dark//metadata.json"
Oct 11 07:57:07 Liberator plasmashell[66745]: kf.coreaddons: Couldn't open "/home/nate/.local/share/wallpapers/ArcDusk-dark//metadata.json"
Oct 11 07:57:07 Liberator plasmashell[66745]: kf.coreaddons: Couldn't open "/home/nate/.local/share/wallpapers/Qogir-dark//metadata.json"
Oct 11 07:57:07 Liberator plasmashell[66745]: kf.coreaddons: Couldn't open "/home/nate/.local/share/wallpapers/Qogir-dark//metadata.json"
Oct 11 07:57:07 Liberator plasmashell[66745]: kf.coreaddons: Couldn't open "/home/nate/.local/share/wallpapers/WhiteSur//metadata.json"
Oct 11 07:57:07 Liberator plasmashell[66745]: kf.coreaddons: Couldn't open "/home/nate/.local/share/wallpapers/WhiteSur//metadata.json"
Oct 11 07:57:07 Liberator plasmashell[66745]: kf.coreaddons: Couldn't open "/home/nate/.local/share/wallpapers/Win11OS-light//metadata.json"
Oct 11 07:57:07 Liberator plasmashell[66745]: kf.coreaddons: Couldn't open "/home/nate/.local/share/wallpapers/Win11OS-light//metadata.json"
Oct 11 07:57:07 Liberator plasmashell[66745]: kf.coreaddons: Couldn't open "/usr/share/wallpapers/F36//metadata.json"
Oct 11 07:57:07 Liberator plasmashell[66745]: kf.coreaddons: Couldn't open "/usr/share/wallpapers/F36//metadata.json"
Oct 11 07:57:07 Liberator plasmashell[66745]: kf.coreaddons: Couldn't open "/usr/share/wallpapers/F37//metadata.json"
Oct 11 07:57:07 Liberator plasmashell[66745]: kf.coreaddons: Couldn't open "/usr/share/wallpapers/F37//metadata.json"
Oct 11 07:57:07 Liberator plasmashell[66745]: kf.coreaddons: Couldn't open "/usr/share/wallpapers/F38//metadata.json"
Oct 11 07:57:07 Liberator plasmashell[66745]: kf.coreaddons: Couldn't open "/usr/share/wallpapers/F38//metadata.json"


Indeed, these files don't exist. They are named "metadata.desktop", not "metadata.json".
Comment 1 Bug Janitor Service 2023-10-17 20:02:36 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kpackage/-/merge_requests/87
Comment 2 Alexander Lohnau 2023-10-18 20:47:17 UTC
Git commit 7a9b0a72e9f1ddf8a830270b273d37291c139161 by Alexander Lohnau.
Committed on 18/10/2023 at 22:43.
Pushed by alex into branch 'master'.

Fix check for metadata.json file existing

M  +1    -1    src/kpackage/package.cpp
M  +2    -2    src/kpackage/private/packagejobthread.cpp

https://invent.kde.org/frameworks/kpackage/-/commit/7a9b0a72e9f1ddf8a830270b273d37291c139161