Fix check for metadata.json file existing

BUG: 475467